Fix wrap on mobile devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -158,4 +158,5 @@ p[style] a:hover {
     color: #ffffff;
     opacity: 0.7;
     z-index: 2;
+    white-space: nowrap;
 }
